<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/calculator"
            android:icon="@android:drawable/arrow_down_float"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/browser"
            android:icon="@android:drawable/arrow_up_float"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/musicFragment"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_music" />
        <item
            android:id="@+id/sensors"
            android:icon="@android:drawable/btn_default_small"
            android:title="@string/menu_sensors" />
        <item
            android:id="@+id/photo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_photo" />
        <item
            android:id="@+id/audioRecord"
            android:icon="@android:drawable/btn_radio"
            android:title="@string/menu_audio" />
        <item
            android:id="@+id/settings"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/storyFragment"
            android:icon="@android:drawable/btn_dropdown"
            android:title="@string/menu_story"/>
        <item
            android:id="@+id/socketFragment"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/menu_socket"/>
        <item
            android:id="@+id/accountFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_post"/>
    </group>
</menu>