<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.lebedeva.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.lebedeva.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.lebedeva.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/calculator"
        android:name="ru.mirea.lebedeva.mireaproject.Calculator"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculator" />
    <fragment
        android:id="@+id/browser"
        android:name="ru.mirea.lebedeva.mireaproject.Browser"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_browser" />
    <fragment
        android:id="@+id/musicFragment"
        android:name="ru.mirea.lebedeva.mireaproject.MusicFragment"
        android:label="fragment_music"
        tools:layout="@layout/fragment_music" />
    <fragment
        android:id="@+id/sensors"
        android:name="ru.mirea.lebedeva.mireaproject.Sensors"
        android:label="fragment_sensors"
        tools:layout="@layout/fragment_sensors" />
    <fragment
        android:id="@+id/photo"
        android:name="ru.mirea.lebedeva.mireaproject.Photo"
        android:label="fragment_photo"
        tools:layout="@layout/fragment_photo" />
    <fragment
        android:id="@+id/audioRecord"
        android:name="ru.mirea.lebedeva.mireaproject.AudioRecord"
        android:label="fragment_audio_record"
        tools:layout="@layout/fragment_audio_record" />
    <fragment
        android:id="@+id/settings"
        android:name="ru.mirea.lebedeva.mireaproject.Settings"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/storyFragment"
        android:name="ru.mirea.lebedeva.mireaproject.ui.stories.StoryFragment"
        android:label="fragment_story"
        tools:layout="@layout/fragment_story" />
    <fragment
        android:id="@+id/storyFragment"
        android:name="ru.mirea.lebedeva.mireaproject.ui.stories.StoryFragment"
        android:label="fragment_stories_list"
        tools:layout="@layout/fragment_stories_list" />
</navigation>